creating weeks successfully
