# backend/schemas/openapi.json
@@ -675,19 +675,79 @@
         }
       }
     },
-    "/week/import-weeks-from-json": {
+    "/week/test_user_week_create": {
       "post": {
         "tags": [
           "week"
         ],
-        "summary": "Import Weeks From Json",
-        "operationId": "import_weeks_from_json_week_import_weeks_from_json_post",
+        "summary": "Test User Week Create",
+        "operationId": "test_user_week_create_week_test_user_week_create_post",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Body_test_user_week_create_week_test_user_week_create_post"
+              }
+            }
+          },
+          "required": true
+        },
         "responses": {
           "200": {
             "description": "Successful Response",
             "content": {
               "application/json": {
                 "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/agentic/chat": {
+      "get": {
+        "tags": [
+          "agentic"
+        ],
+        "summary": "Chat",
+        "operationId": "chat_agentic_chat_get",
+        "parameters": [
+          {
+            "name": "query",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "title": "Query"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
               }
             }
           }
@@ -963,6 +1023,20 @@
   },
   "components": {
     "schemas": {
+      "Body_test_user_week_create_week_test_user_week_create_post": {
+        "properties": {
+          "user_id": {
+            "type": "string",
+            "format": "uuid",
+            "title": "User Id"
+          }
+        },
+        "type": "object",
+        "required": [
+          "user_id"
+        ],
+        "title": "Body_test_user_week_create_week_test_user_week_create_post"
+      },
       "CreateTeamRequest": {
         "properties": {
           "team_name": {
